<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A89F9F"
    android:foregroundTint="#FFFCFC"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="68dp"
        android:backgroundTint="#B3B3B3"
        android:drawableLeft="@drawable/email_icon"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="#AFAFAF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#C6C6C6"
        android:drawableLeft="@drawable/username_icon"
        android:drawablePadding="5dp"
        android:drawingCacheQuality="auto"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textColorHint="#ACA9A9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#BAB7B7"
        android:drawableLeft="@drawable/ic_outline_lock_24"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="#AAA9A9"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/username_edit_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

    <Button
        android:id="@+id/email_button1"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/toolbar_color"
        android:drawableLeft="@drawable/ic_icons8_email_open"
        android:text="Sign up with Email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/google_signup_btn"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/primary"
        android:drawableLeft="@drawable/ic_google"
        android:drawingCacheQuality="auto"
        android:text="Continue with google"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_button1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/email_button1"
        app:layout_constraintTop_toBottomOf="@+id/email_button1"
        app:layout_constraintVertical_bias="0.138" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Or"
        android:textColor="#9E9C9C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/google_signup_btn"
        app:layout_constraintEnd_toEndOf="@+id/email_button1"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/email_button1"
        app:layout_constraintTop_toBottomOf="@+id/email_button1" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:backgroundTint="#FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="20dp"
        android:theme="?attr/actionBarWidgetTheme"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"

        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:subtitleTextColor="#878282"
        app:title="@string/toolbar_description_signup" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textColor="#E30000"
        app:layout_constraintEnd_toEndOf="@+id/google_signup_btn"
        app:layout_constraintStart_toStartOf="@+id/google_signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/google_signup_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>